--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,5 @@
 .App {
+color:violet;
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -6,6 +7,7 @@
 }
 
 body {
+  
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
